--- a/style.css
+++ b/style.css
@@ -26,12 +26,13 @@
     margin-bottom: 10px;
     font-size: 20px;
 }
-.reset-button {
-    margin-top: 10px;
-    margin-left: 49%;
-    margin-right: 51%;
+.buttons{
+    margin-top: 15px;
+    display: flex;
+    justify-content: center;
+    gap: 20px;
 }
-.reset {
-    font-size: 20px;
+.begin, .stop, .reset {
     padding: 2px;
+    font-size: 20px;
 }
